<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    tools:context=".directions.presenter.DirectionsScreenPresenter"
    tools:visibility="visible">

  <Button
      android:id="@+id/helpBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_margin="20dp"
      android:background="@drawable/help_btn_shape"
      android:contentDescription="Send message asking for help to friends!"
      android:drawableStart="@drawable/help_icn"
      android:drawableLeft="@drawable/help_icn"
      android:drawableRight="@drawable/help_icn"
      android:drawablePadding="20dp"
      android:gravity="left"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:paddingLeft="85dp"
      android:paddingRight="70dp"
      android:text="@string/help"
      android:textAllCaps="false"
      android:textSize="40sp" />

  <TextView
      android:id="@+id/locationTV"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/speechBtn_location"
      android:layout_below="@+id/helpBtn"
      android:layout_centerInParent="true"
      android:layout_marginStart="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginBottom="20dp"
      android:background="@color/colorPrimary"
      android:hint="@string/location_text"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:padding="10dp"
      android:text="@string/location_text"
      android:textColor="@color/white"
      android:textSize="30sp" />

  <Button
      android:id="@+id/speechBtn_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:drawableStart="@drawable/mic"
      android:drawableLeft="@drawable/mic"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:text="@string/speechB_text" />

  <Button
      android:id="@+id/addFriendBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:drawableStart="@drawable/add_icn"
      android:drawableLeft="@drawable/add_icn"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:text="@string/add_friend"
      android:textAllCaps="false" />


</RelativeLayout>
