<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clickable="false"
  android:focusable="false"
  android:background="@color/common_google_signin_btn_text_light_pressed"
  tools:context=".directions.presenter.DirectionsScreenPresenter"
  android:padding="5dp">

  <!-- Talkback reads the hint event if not visible -->
  <LinearLayout
    android:id="@+id/infoLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    >
    <AutoCompleteTextView
      android:id="@+id/destACTV"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:paddingBottom="10dp"
      android:background="@drawable/tv_shape"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:padding="10dp"
      android:hint="@string/hintEnd"
      android:singleLine="true"
      android:imeActionId="@integer/IME_ACTION_DONE"
      android:textColorHint="@color/white"
      />

    <!-- focusable = true instructs TalkBack to read the whole content once-->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="true"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:background="@drawable/tv_shape"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/distanceIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:labelFor="@+id/distanceIV"
        android:src="@drawable/distance_ico"
        android:minWidth="48dp"
        android:minHeight="48dp"/>

      <TextView
        android:id="@+id/distanceTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="5dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:hint="@string/distance_hint"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:minWidth="48dp"
        android:minHeight="48dp"/>

      <ImageView
        android:id="@+id/durationIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:labelFor="@+id/durationTV"
        android:src="@drawable/time_ico"
        android:minWidth="48dp"
        android:minHeight="48dp"/>

      <TextView
        android:id="@+id/durationTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="25sp"
        android:hint="@string/duration_hint"
        android:textAlignment="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="@color/white"/>
    </LinearLayout>

  </LinearLayout>

  <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/speechButton_directions"
    android:layout_below="@+id/infoLayout"
    android:contentDescription = "Map on which the path is drawn!"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    tools:context="mm.spp.root.MapsActivity"/>


  <!-- The gravity and button size are set programatically -->
  <Button
    android:id="@+id/speechButton_directions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:layout_margin="10dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:drawableLeft="@drawable/mic"
    android:drawableStart="@drawable/mic"
    android:text="@string/speechB_text"
    android:textAllCaps="false"/>

  <Button
    android:id="@+id/findPathB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:drawableLeft="@drawable/directions_ico"
    android:drawableStart="@drawable/directions_ico"
    android:text="@string/find_path"
    android:textAllCaps="false"/>

</RelativeLayout>
